fix ipad arrow alignment

--- a/client/src/components/Header/styles.scss
+++ b/client/src/components/Header/styles.scss
@@ -330,7 +330,7 @@ span.logo svg path,
   }
 
   i.cal-date-nav {
-    top: 15rem;
+    top: 13.5rem;
   }
 
   #vis + div {
