--- a/client/src/styles/bundle.css
+++ b/client/src/styles/bundle.css
@@ -393,9 +393,6 @@ html {
 .left-1\/3 {
   left: 33%;
 }
-.-left-12 {
-  left: 0;
-}
 .isolate {
   isolation: isolate;
 }
@@ -2374,6 +2371,9 @@ html {
 @media (min-width: 640px) {
   .left-1\/3 {
     left: 42%;
+  }
+  .sm\:-left-12 {
+    left: -3rem;
   }
 
   .sm\:inset-12 {
